@@ -1,0 +1,8 @@
+using System;
+using TestBase;
+
+namespace Test
+{
+  public class Test : TestBase.TestBase
+  {}
+}
