@@ -1,0 +1,7 @@
+using System;
+
+namespace TestBase
+{
+  public class TestBase
+  {}
+}
