@@ -1,0 +1,12 @@
+using System;
+using Test;
+
+public class Asm : Test.Test
+{
+  Test.Test t;
+  
+  public Asm ()
+  {
+    t = new Test.Test ();
+  }
+}
