@@ -1,3 +1,8 @@
+2007-09-18  Marek Habersack  <mhabersack@novell.com>
+
+	* configure.in: added additional Makefile to be generated in the
+	mono/tests/assemblyresolve/ subdir.
+
 2007-09-17  Zoltan Varga  <vargaz@gmail.com>
 
 	* docs/memory-management.txt: A new file describing metadata memory management.
